fixed the profile section alignment issue

--- a/style.css
+++ b/style.css
@@ -1,35 +1,52 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-html,
-body {
+
+html {
   width: 100%;
   height: 100%;
+  overscroll-behavior: none;
+  -webkit-overflow-scrolling: touch;
+  background: linear-gradient(to right, #000000, #434343, black) !important;
+  background-attachment: fixed;
+}
+body {
+  width: 100%;
+  min-height: 100vh;
   color: white;
-  background-image:linear-gradient(to right,#000000,#434343,black);
+  background: linear-gradient(to right, #000000, #434343, black);
+  background-attachment: fixed;
   font-family: 'Poppins';
+  overscroll-behavior: none;
+  -webkit-overflow-scrolling: touch;
 }
 
 #main {
-  /* height: 100%; */
+  min-height: 100vh;
+  width: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  /* background-color: rebeccapurple; */
-  /* height: 100vh; */
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 20px;
+  padding: 20px;
+  background: linear-gradient(to right, #000000, #434343, black);
+  background-attachment: fixed;
+  overscroll-behavior: none;
 }
 
 #info {
-  height: 100%;
+  height: auto;
   width: 33%;
-  /* background-color: aqua; */
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  position: sticky;
+  top: 20px;
 }
 .det{
   display: none;
@@ -41,11 +58,13 @@ body {
   align-items: center;
   background-color: #1b1919;
   color: white;
-  height: 700px;
-  width: 80%;
+  height: auto;
+  min-height: 650px;
+  width: 100%;
+  max-width: 350px;
   border-radius: 20px;
-  padding: 0px 18px;
-  margin-top: 10px;
+  padding: 20px;
+  margin-top: 0px;
 }
 #pp {
   height: 200px;
@@ -83,7 +102,6 @@ body {
   height: 100px;
   width: 100px;
   margin: 4px 8px;
-  /* background-color: coral; */
 }
 #followersCont {
   display: flex;
@@ -93,7 +111,6 @@ body {
   height: 100px;
   width: 100px;
   margin: 4px 8px;
-  /* background-color: firebrick; */
 }
 #socials {
   display: flex;
@@ -109,15 +126,15 @@ body {
   margin: 4px 12px;
 }
 #repo {
-  height: 100%;
+  height: auto;
+  min-height: 100vh;
   width: 67%;
-  padding: 40px 12px;
-  overflow-y: scroll;
-  /* background-color: brown; */
+  padding: 0px 20px;
+  overflow-y: visible;
 }
 .title{
     padding: 0px 8px;
-    margin: 12px 0px;
+    margin: 0px 0px 20px 0px;
 }
 .singleRepo {
   height: 30%;
@@ -185,12 +202,13 @@ margin: 0px 4px;
  #main{
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  padding: 10px;
  }
  #info{
   width: 100%;
-  /* background-color: aqua; */
+  position: static;
  }
  .det{
   display: flex;
@@ -203,12 +221,15 @@ margin: 0px 4px;
   margin: 0px 8px;
  }
  #infoCont{
-  height: 100%;
+  height: auto;
+  width: 100%;
+  max-width: none;
  }
  #repo{
-  width: 90%;
-  height: 100%;
-  overflow-y:hidden;
+  width: 100%;
+  height: auto;
+  overflow-y: visible;
+  padding: 20px 0px;
   /* background-color: aqua; */
   /* display: flex;
   flex-direction: column;
